# formal-mathfin

./: .dockerignore  .gitignore  .mailmap  .zenodo.json  AGENTS.md  BRIDGE_AUDIT.md  Building a Hybrid Lean 4 and Isabelle Verification System in Python for Stochastic Processes.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_NOTE.md  FORMALIZATION_ROADMAP.md  FORMALIZATION_STATUS.md  HybridVerify.lean  LEARNINGS.md  LICENSE  MATH_DEPTH_ROADMAP.md  MathFin.lean  QUANTFIN_ROADMAP.md  QuantFin.lean  README.md  RESEARCH_DIRECTIONS.md  formalization.yaml  hybrid_verify.toml  lake-manifest.json  lakefile.lean  mathfin.toml  pyproject.toml  quantfin.toml  requirements.txt  verification_ledger.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  theorem_contribution.md
.github/workflows/: build.yml  hf-publish.yml  kernel-replay.yml  lint.yml  publish-image.yml
HybridVerify/: Examples.lean
HybridVerify/Actuarial/: CompoundPoisson.lean  Mortality.lean
HybridVerify/Binomial/: American.lean  AmericanCallNoDividend.lean  Bermudan.lean  CRRConvergence.lean  CRRConvergenceTransfer.lean  DriftLimit.lean  Girsanov.lean  MertonAmericanCallTree.lean  ReplicatingUniqueness.lean
HybridVerify/BlackScholes/: Bachelier.lean  BreedenLitzenberger.lean  Call.lean  CappedCall.lean  ChooserComposition.lean  DigitalGreeks.lean  GBMLogMoments.lean  ImpliedVolatility.lean  LognormalMoments.lean  Lookback.lean  NewtonRaphsonIV.lean  PriceBounds.lean  Spreads.lean
HybridVerify/FixedIncome/: Credit.lean  DurationSensitivity.lean  ForwardRate.lean  MacaulayModified.lean  (+1 more)
MathFin/: AxiomAudit.lean  AxiomAuditGen.lean  Blueprint.lean  Examples.lean
QuantFin/: AxiomAudit.lean
benchmarks/: brownian_motion.json  conditional_expectation.json  continuous_martingales.json  cross_validated.json  distributions.json  girsanov_finance.json  markov_chains.json  martingales.json  mathematical_finance.json  poisson_processes.json  stochastic_calculus.json
docker/: AFP_NOTES.md  Dockerfile.isabelle  Dockerfile.lean  Dockerfile.verify  docker-compose.yml
docs/: README.md  architecture.md  blueprint.md  blueprint_nodes.json  bridges.md  coverage.md  deep-review-2026-05-29.md  feynman-kac-growth-deferred.md  hjm-program.md  idiomatic-review-2026-07-04.md  issue-labels.md  ito-integral-clm-deferred.md  leaps.md  math-quality-review-2026-07-04.md  mathematical-architecture.md  onboarding.md  patterns.md  portfolio-review-2026-05-28.md  roadmap.md  troubleshooting.md  upstreaming.md  values-audit-2026-05-30.md  values-review.md
isabelle/: ROOT
lean/: HybridVerify.lean  lake-manifest.json  lakefile.lean
python/: cli.py  config.py  isabelle_backend.py  lean_backend.py  models.py  orchestrator.py
scripts/: add_phase12_benchmarks.py  add_phase13_benchmarks.py  bench-check.sh  lean-check.sh  loogle.sh  nolints.json  restructure_rename.py
tests/: test_formalization_yaml.py  test_lean_backend.py  test_ledger.py  test_router.py  test_values.py
tools/: blueprint_render.py  formalization_meta.toml  formalization_yaml.py
upstream/: README.md
(+535 files in other folders)
