[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfin"
version = "0.1.0"
description = "Lean 4 verification runner for the QuantFin formal-finance library"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
lean = ["lean-interact>=0.11.0"]
all = [
    "lean-interact>=0.11.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
quantfin-verify = "tools.verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
namespaces = true

[tool.quantfin]
[tool.quantfin.lean]
version = "v4.30.0-rc1"
mathlib = true

# Mirror of quantfin.toml's extra_requires; kept here so coverage tooling
# that reads pyproject as a fallback config sees the same dependency set.
[[tool.quantfin.lean.extra_requires]]
name = "BrownianMotion"
git = "https://github.com/RemyDegenne/brownian-motion.git"
rev = "51807683c5130238fd4013b2fbee314135e3d8d9"

[tool.quantfin.orchestrator]
default_timeout = 60.0
