[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfin"
version = "0.1.0"
description = "Lean 4 verification runner for the MathFin formal-finance library"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
lean = ["lean-interact>=0.11.4"]
all = [
    "lean-interact>=0.11.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mathfin-verify = "tools.verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
namespaces = true

[tool.mathfin]
# Lean/Mathlib/BrownianMotion versions are authoritative in `lean-toolchain` +
# `lakefile.lean` + `lake-manifest.json`; the verifier points at the repo root
# via mathfin.toml `local_project = "."`. (A stale version-mirror block lived
# here until 2026-06-06 — config.py never read it.)

[tool.mathfin.orchestrator]
default_timeout = 60.0
